syntax = "proto3";

package sum;

option go_package = "github.com/shaikzhafir/udemy-go-grpc/sum/proto";

message SumRequest {
  int64 first_int = 1;
  int64 second_int = 2;
}

message SumResponse {
  int64 result = 1;
}

service SumService {
  rpc Sum (SumRequest) returns (SumResponse);
}
